--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "jest": "^20.0.4"
+  },
+  "dependencies": {
+    "react-redux": "^5.0.6"
   }
 }
