--- a/package.json
+++ b/package.json
@@ -12,9 +12,16 @@
     "babel-jest": "^20.0.3",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
-    "jest": "^20.0.4"
+    "babel-preset-react": "^6.24.1",
+    "jest": "^20.0.4",
+    "react-dom": "^15.6.1",
+    "react-test-renderer": "^15.6.1",
+    "redux": "^3.7.2"
   },
   "dependencies": {
     "react-redux": "^5.0.6"
+  },
+  "peerDependencies": {
+    "react": "^15.6.1"
   }
 }
