--- a/package.json
+++ b/package.json
@@ -13,12 +13,16 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "enzyme": "^2.9.1",
     "jest": "^20.0.4",
+    "react": "^15.6.1",
+    "react-addons-test-utils": "^15.6.0",
     "react-dom": "^15.6.1",
     "react-test-renderer": "^15.6.1",
     "redux": "^3.7.2"
   },
   "dependencies": {
+    "lodash": "^4.17.4",
     "react-redux": "^5.0.6"
   },
   "peerDependencies": {
