--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@khanghoang/redux-modal",
   "version": "0.0.3",
-  "main": "index.js",
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.es.js",
   "license": "MIT",
   "scripts": {
     "test": "jest --i",
