--- a/example/package.json
+++ b/example/package.json
@@ -6,7 +6,10 @@
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.2",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.12"
+    "react-redux": "^5.0.6",
+    "react-scripts": "1.0.12",
+    "redux": "^3.7.2",
+    "@khanghoang/redux-modal": "../"
   },
   "scripts": {
     "start": "react-scripts start",
